[package]
name = "liboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
futures-util = "0.3.28"
lichess-board = { path = "../lichess-board" }
tokio = { version = "1", features = ["full"] }
