[package]
name = "lichess-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-stream = "0.3.5"
futures-util = "0.3.28"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
