[package]
name = "lichess-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
